added the toggle and filter functionality

--- a/browser-extension-ui/index.html
+++ b/browser-extension-ui/index.html
@@ -18,9 +18,9 @@
         <section class="extension-list">
             <span>Extensions List</span>
             <div class="select-options">
-                <div>All</div>
-                <div>Active</div>
-                <div>Inactive</div>
+                <div data-filter="all">All</div>
+                <div data-filter="active">Active</div>
+                <div data-filter="inactive">Inactive</div>
             </div>
         </section>
 
